cmake_minimum_required(VERSION 3.1)
file (GLOB pxgf_src "*.cpp")
add_library (pxgf_shared SHARED ${pxgf_src})
add_library (pxgf_static STATIC ${pxgf_src})
set_property(TARGET pxgf_static PROPERTY CXX_STANDARD 11)
set_property(TARGET pxgf_static PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET pxgf_shared PROPERTY CXX_STANDARD 11)
set_property(TARGET pxgf_shared PROPERTY CXX_STANDARD_REQUIRED ON)
include_directories (${CMAKE_CURRENT_SOURCE_DIR}/../include)
