cmake_minimum_required(VERSION 3.1)
project (PXGFToMatlab)
file (GLOB sample_src "*.cpp")
include_directories (../../include)
link_directories (../../lib)
add_executable (PXGFToMatlab ${sample_src})
set_target_properties (PXGFToMatlab PROPERTIES CXX_STANDARD 11)
set_target_properties (PXGFToMatlab PROPERTIES CXX_STANDARD_REQUIRED ON)
target_link_libraries (PXGFToMatlab pxgf_static)
