cmake_minimum_required(VERSION 3.1)
project (SocketSSNC)
file (GLOB sample_src "*.cpp")
include_directories (../../include)
link_directories (../../lib)
add_executable (SocketSSNC ${sample_src})
set_target_properties (SocketSSNC PROPERTIES CXX_STANDARD 11)
set_target_properties (SocketSSNC PROPERTIES CXX_STANDARD_REQUIRED ON)
target_link_libraries (SocketSSNC pxgf_static)
