cmake_minimum_required(VERSION 3.1)
project (ToneWriter)
file (GLOB sample_src "*.cpp")
include_directories (../../include)
link_directories (../../lib)
add_executable (ToneWriter ${sample_src})
set_target_properties (ToneWriter PROPERTIES CXX_STANDARD 11)
set_target_properties (ToneWriter PROPERTIES CXX_STANDARD_REQUIRED ON)
target_link_libraries (ToneWriter pxgf_static)
